--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
         <item>pending</item>
         <item>available</item>
     </string-array>
+    <string-array name="roles">
+        <item>Admin</item>
+        <item>Usuario Estándar</item>
+    </string-array>
 </resources>
