Funcionalidad de precios, actualiza los datos de la bbdd

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
         <item>Valencia</item>
     </string-array>
     <string-array name="tipo">
+        <item>Desplegar tipo</item>
         <item>Standard</item>
         <item>Deluxe</item>
         <item>Premium</item>
